<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailAgentActivity">
    <ImageView
        android:id="@+id/backgroundGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_gradient" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="25dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/button_back"
            android:padding="4dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/arrow_back_24px"/>
        <TextView
            android:id="@+id/tvNameAgents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_displayname"
            android:textColor="@color/valo_white"
            android:fontFamily="@font/monomaniacone_regular"
            android:textSize="32sp"/>
    </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginEnd="25dp"
                android:layout_gravity="top|end"
                android:background="@drawable/background_button">
                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:padding="6dp"
                    android:layout_width="48dp"
                    android:textOff=""
                    android:textOn=""
                    android:layout_height="48dp"
                    android:background="@drawable/toggle_favorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <ImageView
                android:id="@+id/IvbackgroundTextName"
                android:layout_width="wrap_content"
                android:layout_height="550dp"
                android:layout_gravity="top|center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/ivbackgrounddisplayname" />
            <ImageView
                android:id="@+id/IvagentsImage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="100dp"
                android:layout_gravity="top|center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/ivagentsimage"
                android:transitionName="sharedImageTransition"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/bottom_detail">
            <TextView
                android:id="@+id/tvNameAgents2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="12dp"
                android:textSize="24sp"
                android:layout_gravity="top|end"
                android:textColor="@color/valo_light_gray"
                android:fontFamily="@font/monomaniacone_regular"
                android:text=""/>
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:textColor="@color/valo_black"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="48dp"
                android:text="@string/deskripsi_tentang_karakter"
                android:layout_gravity="top|end"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/valo_gray"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:text="@string/click_here_for_see_more"
                android:layout_gravity="center"/>
                <Button
                    android:id="@+id/btnSearchInYoutube"
                    android:layout_width="220dp"
                    android:layout_height="65dp"
                    android:text="@string/search_now"
                    android:fontFamily="@font/monomaniacone_regular"
                    android:textSize="20sp"
                    android:layout_marginTop="70dp"
                    android:textColor="@color/valo_light_gray"
                    android:background="@drawable/button_secondary"
                    android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tvNameDevelopers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text=""
                android:textAlignment="center"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center|bottom"
                android:textColor="@color/valo_black"/>
        </FrameLayout>
    </LinearLayout>
    </ScrollView>
</FrameLayout>