<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/valo_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ListAgentss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:listitem="@layout/item_list_agents" />
    <TextView
        android:id="@+id/noResultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_agents_found"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@color/valo_black"
        android:layout_gravity="top|center">
        <ImageView
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
             android:contentDescription="@string/descriptionlogo"
            android:src="@drawable/logo_valo"
            android:layout_marginStart="16dp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorant_agent"
            android:textColor="@color/valo_red"
            android:fontFamily="@font/monomaniacone_regular"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="86dp"/>
        <ImageButton
            android:id="@+id/btnNavigateFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/button_navigate_favorite"
            android:padding="8dp"
            android:layout_gravity="end"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/favorite_primary"/>
        <SearchView
            android:id="@+id/searchViewAgents"
            android:layout_width="380dp"
            android:layout_height="58dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:iconifiedByDefault="false"
            android:layout_gravity="top|center"
            android:background="@drawable/background_search"
            android:layout_marginTop="96dp"
            android:queryHint="Search agents" />
    </FrameLayout>
</FrameLayout>